# Sleipnir

./: .gitignore  DESIGN.md  LICENSE  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
examples/: test_advanced_reasoning.py  test_agent.py  test_client.py  test_search_tool.py  test_tool.py  tool_calling.py
src/sleipnir_agent/: __init__.py  agent.py  cli.py  client.py  events.py  gemini_client.py  memory.py  openai_client.py
src/tools/: registry.py  search.py
tests/: test_agent.py
