[project]
name = "sleipnir_agent"
version = "0.0.1"
description = "A lightweight Agent SDK for self-hosted LLMs."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Andy Hsu" }
]
keywords = [
    "agent",
    "llm",
    "self-hosted",
    "openai-compatible",
    "tool-calling",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "rich>=13.7.0",
    "uvicorn>=0.49.0",
]

[project.urls]
Homepage = "https://github.com/andyweij/sleipnir_agent"
Repository = "https://github.com/andyweij/sleipnir_agent"
Issues = "https://github.com/andyweij/sleipnir_agent/issues"

[project.scripts]
sleipnir_agent = "sleipnir_agent.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "python-dotenv>=1.2.2",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sleipnir_agent"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--strict-markers",
    "--strict-config",
]
